provarAnt/00D1b0000000d5bEAA/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ATDSA_bookshelf__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_GUID__c</fullName>
        <description>Created to house Contact GUID from Dynamics, not displayed on page layouts.</description>
        <label>Contact GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Photo__c</fullName>
        <label>Contact Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <picklist>
            <picklistValues>
                <fullName>A/P Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A/R Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Principal/Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecommerce Director/Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Parts/Fixed Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Sales Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duplicate_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is a duplicate contact and it will be flagged for removal.</inlineHelpText>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormPos__Current_Position_Start__c</fullName>
        <description>Tracks the start date of a Contact&apos;s association with an Account for future use in the Former Position record when the Contact is re-associated with a different Account.</description>
        <label>Current Position Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone #2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_4__c</fullName>
        <label>Phone #4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_BU_Contact__c</fullName>
        <inlineHelpText>Select which BUs this person should be made the primary contact for.</inlineHelpText>
        <label>Primary Contact</label>
        <picklist>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMENET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>describes the contact&apos;s role at the dealership</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Appraiser Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricer Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCM/UCD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <inlineHelpText>updated by workflow with the contact status is updated to Gone - shows No Longer with Dealership&quot;</inlineHelpText>
        <label>Status Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>shows the status of a contact at a dealership</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>caibur__Cox_Auto_Id__c</fullName>
        <description>Cox Auto Id for this business until account.
Formula from account Cox Auto Id</description>
        <formula>Account.caibur__Cox_Auto_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cox Auto Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caibur__Cox_Auto_Major_Account__c</fullName>
        <formula>TEXT(Account.caibur__Cox_Auto_Major_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cox Auto Major Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caibur__Customer_CA_Id__c</fullName>
        <description>The Cox Auto Id of the customer/rooftop that this account rolls up to. This provides a single Id to a customer across all business units.
Formula from account Customer CA Id</description>
        <formula>Account.caibur__Customer_CA_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer CA Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caibur__Dealer_Group_CA_Id__c</fullName>
        <description>The Cox Auto Id of the dealer group this account is associated to.
Formula from account Customer CA Id</description>
        <formula>Account.caibur__Dealer_Group_CA_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group CA Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caibur__Owner_Name__c</fullName>
        <description>Provides a human readable owner name when accessing this record through Lightning Connect.</description>
        <formula>Owner.FirstName+&quot; &quot;+Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Duplicate_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Duplicate_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Duplicate Contacts</label>
        <sharedTo>
            <group>COE_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Phone_or_Mobile_number_required</fullName>
        <active>true</active>
        <description>All contacts must have a phone or mobile phone number to be created or saved</description>
        <errorConditionFormula>AND( 
ISBLANK(Phone),ISBLANK(MobilePhone))</errorConditionFormula>
        <errorMessage>Phone or Mobile number is required to create or save a contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>contact_email_cannot_be_company_email</fullName>
        <active>true</active>
        <description>if the contact&apos;s email address contains one of the company email address domains, and it&apos;s not named AutoTrader or COE Dealer for Testing, and the account record type is not Third-Party or Partner, user cannot save the contact record</description>
        <errorConditionFormula>AND( 

AND( 
 Account.RecordTypeId &lt;&gt; &apos;012E00000005ynY&apos;, 
 Account.RecordTypeId &lt;&gt; &apos;012E000000057U2&apos;),

AND(
Account.Name &lt;&gt; &quot;AutoTrader&quot;, 
Account.Name &lt;&gt; &quot;COE Dealer for Testing&quot;  
),

OR( 
CONTAINS(Email,&apos;@aisrebates.com&apos;), 
CONTAINS(Email,&apos;@auctiongenius.com&apos;), 
CONTAINS(Email,&apos;@auctiongenius.net&apos;), 
CONTAINS(Email,&apos;@autotrader.com&apos;), 
CONTAINS(Email,&apos;@autotradergroup.com&apos;), 
CONTAINS(Email,&apos;@autotradergroup.mail.onmicrosoft.com&apos;), 
CONTAINS(Email,&apos;@buybooktech.com&apos;), 
CONTAINS(Email,&apos;@cdmdata.com&apos;), 
CONTAINS(Email,&apos;@coxautoinc.com&apos;), 
CONTAINS(Email,&apos;@dealsonwheels.com&apos;), 
CONTAINS(Email,&apos;@haystak.com&apos;), 
CONTAINS(Email,&apos;@homenetauto.com&apos;), 
CONTAINS(Email,&apos;@innovativedealertechnologies.com&apos;), 
CONTAINS(Email,&apos;@kbb.com&apos;), 
CONTAINS(Email,&apos;@makemydeal.com&apos;), 
CONTAINS(Email,&apos;@quickvalues.com&apos;), 
CONTAINS(Email,&apos;@vauto.com&apos;), 
CONTAINS(Email,&apos;@vinsolutions.com&apos;), 
CONTAINS(Email,&apos;@manheim.com&apos;), 
CONTAINS(Email,&apos;@manheimcloud.onmicrosoft.com&apos;)
)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Unable to save contact. Cox Automotive employees cannot be added as contacts in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>